<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SecondMarket</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">学&#160;&#160;&#160;号:</string>
    <string name="password">密&#160;&#160;&#160;码:</string>
    <string name="passwordinregister">密&#160;&#160;&#160;&#160;&#160;&#160;码:</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="remember">记住密码</string>
    <string name="encounter">账&#160;&#160;&#160;&#160;&#160;&#160;号</string>
    <string name="school">学&#160;&#160;&#160;&#160;&#160;&#160;校</string>
    <string name="dormitry">宿&#160;&#160;舍&#160;号</string>
    <string name="getcheck">获取验证码</string>
    <string name="inputcheck">请输入验证码</string>
    <string name="reset">重置</string>
    <string name="forget">忘记密码?</string>
    <string name="agree">确认密码</string>
    <string name="dormitorynum">楼&#160;&#160;&#160;&#160;&#160;&#160;号</string>
    <string name="mine">我的</string>
    <string name="myinfo">我的信息</string>
    <string name="mycollect">我的收藏</string>
    <string name="myfoot">我的足迹</string>
    <string name="set">设置</string>
    <string name="cleancache">清空缓存</string>
    <string name="checkupdate">检查更新</string>
    <string name="about">关于</string>
    <string name="information">信息</string>
    <string name="release">发布</string>
    <string name="telephone">电话</string>
    <string name="email">邮箱</string>
    <string name="address">地址</string>
    <string name="update">修改</string>
    <string name="change">更换</string>
    <string name="releaseded">已发布</string>
    <string name="torelease">待发布</string>
    <string name="checkall">全选</string>
    <string name="movetofavorite">移动到收藏夹</string>
    <string name="delete">删除</string>
    <string name="releasing">现在发布</string>
    <string name="developer">开发者</string>
    <string name="developdepart">开发单位</string>
    <string name="servicetel">客服电话</string>
    <string name="callback">拨打反馈</string>
    <string name="callandback">拨打后弹出反馈信息</string>
    <string name="help">帮助</string>
    <string name="backreceive">退出后接收信息</string>
    <string name="informationprompt">消息提示信息</string>
    <string name="cleanfoot">清空足迹</string>
    <string name="edit">编辑</string>
    <string name="myrelease">我的发布</string>
    <string name="xuptmarket">西邮Market</string>
    <string name="book">书籍报刊</string>
    <string name="digital">数码电子</string>
    <string name="transport">交通工具</string>
    <string name="dailyuse">生活用品</string>
    <string name="pe_use">体育用品</string>
    <string name="clothesuse">服装饰品</string>
    <string name="freegive">免费赠品</string>
    <string name="other">其他</string>
    <string name="newrelease">最新发布</string>
    <string name="allrelease">全部发布</string>
    <string name="sortinformation">分类信息</string>
    <string name="currentsort">当前分类：</string>
    <string name="sortdetails">分类详情</string>
    <string name="babyspeak">宝贝描述</string>
    <string name="price">价格</string>
    <string name="phonenumber">联系方式</string>
    <string name="home_recom">recom</string>
	<string name="home_cate">cate</string>
	<string name="home_top">top</string>
	<string name="home_my">my</string>
	<string name="home_off">off</string>
	
	<string name="alternate_title">An alternate title that is long</string>
    <string name="toggle_title">Toggle title</string>
	
    <string name="userGrade">年级</string>
    <string name="userNike">昵称</string>
    <string name="userName">姓名</string>
    <string name="userSchoolNum">学号</string>
    
    
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string-array name="action">
    	<item>书籍报刊</item>
    	<item>数码电子</item>
    	<item>交通工具</item>
    	<item>生活用品</item>
    	<item>体育用品</item>
    	<item>衣物服饰</item>
    	<item>免费赠送</item>
    	<item>其他</item>
    </string-array>
    

</resources>
