<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff" >

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/iv_title_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/ic_launcher"
            android:contentDescription="@string/about" />

        <TextView
            android:id="@+id/tv_title_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/iv_title_logo"
            android:clickable="true"
            android:gravity="center_vertical|left"
            android:text="@string/xuptmarket"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ib_title_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:baselineAlignBottom="@id/iv_title_logo"
            android:clickable="true" />
    </RelativeLayout>

    <View
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/relative"
        android:background="@drawable/title_bg_index_bg" />

    <LinearLayout
        android:id="@+id/liner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_view"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bookAndNewspaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:contentDescription="@string/about"
            android:drawableTop="@drawable/home_book"
            android:text="@string/book" />

        <Button
            android:id="@+id/digital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:contentDescription="@string/about"
            android:drawableTop="@drawable/home_shuma"
            android:text="@string/digital" />

        <Button
            android:id="@+id/vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:contentDescription="@string/about"
            android:drawableTop="@drawable/home_jiaotong"
            android:text="@string/transport" />

        <Button
            android:id="@+id/dailyUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:contentDescription="@string/about"
            android:drawableTop="@drawable/home_life"
            android:text="@string/dailyuse" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/liner1"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="10sp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/peUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:contentDescription="@string/about"
            android:drawableTop="@drawable/home_tiyu"
            android:text="@string/pe_use" />

        <Button
            android:id="@+id/clothesUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:contentDescription="@string/about"
            android:drawableTop="@drawable/home_cloth"
            android:text="@string/clothesuse" />

        <Button
            android:id="@+id/freeGive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:contentDescription="@string/about"
            android:drawableTop="@drawable/home_send"
            android:text="@string/freegive" />

        <Button
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:contentDescription="@string/about"
            android:drawableTop="@drawable/home_qita"
            android:text="@string/other" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/liner2"
        android:layout_marginTop="10sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/newRelease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:text="@string/newrelease"
            android:textSize="18sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/liner3"
        android:layout_marginTop="5sp"
        android:divider="#aaa" >
    </ListView>

    <LinearLayout
        android:id="@+id/liner4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:text="@string/information"
            android:textColor="#0af" />

        <Button
            android:id="@+id/release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:text="@string/release"
            android:textColor="#444" />

        <Button
            android:id="@+id/mine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:text="@string/mine"
            android:textColor="#444" />
    </LinearLayout>

</RelativeLayout>