<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff" >

    <LinearLayout
        android:id="@+id/liner1"
        android:layout_width="fill_parent"
        android:layout_height="47sp"
        android:background="#05f"
        android:orientation="vertical" >

        <Button
            android:id="@+id/sortdetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#05f"
            android:paddingLeft="2sp"
            android:text="@string/sortdetails"
            android:textColor="#fff"
            android:textSize="22sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="fill_parent"
        android:layout_height="130dip"
        android:layout_marginTop="40sp" >

        <android.support.v4.view.ViewPager
            android:id="@+id/vp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_gravity="bottom"
            android:background="#20000000"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dip"
                android:text="这是标题"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:orientation="horizontal" >

                <View
                    android:id="@+id/dot1"
                    android:layout_width="5dip"
                    android:layout_height="5dip"
                    android:layout_marginLeft="3dip"
                    android:layout_marginRight="3dip"
                    android:background="@drawable/dot_focused" />

                <View
                    android:id="@+id/dot2"
                    android:layout_width="5dip"
                    android:layout_height="5dip"
                    android:layout_marginLeft="3dip"
                    android:layout_marginRight="3dip"
                    android:background="@drawable/dot_normal" />

                <View
                    android:id="@+id/dot3"
                    android:layout_width="5dip"
                    android:layout_height="5dip"
                    android:layout_marginLeft="3dip"
                    android:layout_marginRight="3dip"
                    android:background="@drawable/dot_normal" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/sortLiner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout" >

        <TextView
            android:id="@+id/babySpeak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="5sp"
            android:text="@string/babyspeak"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/collectSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/redheart"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10sp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sortLiner"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="12sp"
        android:background="@drawable/borderset"
        android:textColor="#0ff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="5sp"
        android:text="@string/price"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/priceIs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="12sp"
        android:background="@drawable/borderset"
        android:textColor="#0ff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/telephone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priceIs"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="5sp"
        android:text="商品发布时间"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/phoneIs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/telephone"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="12sp"
        android:background="@drawable/borderset"
        android:textColor="#0ff"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/liner4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:text="@string/information"
            android:textColor="#0af" />

        <Button
            android:id="@+id/release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:text="@string/release"
            android:textColor="#444" />

        <Button
            android:id="@+id/mine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:text="@string/mine"
            android:textColor="#444" />
    </LinearLayout>

</RelativeLayout>