<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff" >

    <LinearLayout
        android:id="@+id/liner1"
        android:layout_width="fill_parent"
        android:layout_height="45sp"
        android:background="@drawable/title"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/myinformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我的信息"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

        <Button
            android:id="@+id/change"
            android:layout_width="55dp"
            android:layout_height="22dp"
            android:layout_marginLeft="90sp"
            android:background="@drawable/change"
            android:text="更换"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner2"
        android:layout_width="fill_parent"
        android:layout_height="100sp"
        android:layout_below="@+id/liner1"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="25sp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20sp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/about"
            android:src="@drawable/headpic" />
        <!-- adjustViewBounds:是否保持宽高比 -->
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/liner2"
        android:scrollbars="none" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/userSchoolNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="25sp"
                android:text="@string/userSchoolNum"
                android:textColor="#000000"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/userSchoolNumEdit"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userSchoolNum"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="5sp"
                android:background="@drawable/borderset"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="text" />

            <TextView
                android:id="@+id/userNike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userSchoolNumEdit"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="10sp"
                android:text="@string/userNike"
                android:textColor="#000000"
                android:textSize="22sp" />

            <LinearLayout
                android:id="@+id/liner4"
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:layout_below="@+id/userNike"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="5sp"
                android:background="#fff"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/userNikeEdit"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borderset"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="text" />
            </LinearLayout>

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/liner4"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="10sp"
                android:text="@string/userName"
                android:textColor="#000000"
                android:textSize="22sp" />

            <LinearLayout
                android:id="@+id/liner5"
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:layout_below="@+id/userName"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="5sp"
                android:background="#fff"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/userNameEdit"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borderset"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="text" />
            </LinearLayout>

            
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>